public/styles.css
html{
    height:100%;
}
*{
    margin:0;
    padding:0;
}
body{
    width:100%;
    height:100%;
    display:flex;
    justify-content: center;
    align-items: center;
}
#root{
    width:100%;
    height:100%;
    display:flex;
    justify-content: center;
    align-items: center;
    background-color: black;
    background-size: cover;
}
.container{
    display:flex;
    justify-content: center;
    align-items: center;
    background-color:black;
    border:5px solid white;
    border-radius:24px;
    padding:30px;
}
h1{
    color:white;
    font-size:72px;
    font-family: "Audiowide", sans-serif;
    font-weight: 400;
    font-style: normal;
}

